# kalman-filter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Demo/: CMakeLists.txt
Demo/include/: Estimated_position.h  Localizer.h  Main_window.h  Plot_functions.h  Plotter.h  Robot.h  Sensor.h  demo_window.h  estimated_position.h  localizer.h  plot_functions.h  plotter.h  robot.h  sensor.h
Demo/src/: Estimated_position.cpp  Gaussian_noise.cpp  Localizer.cpp  Main.cpp  Main_window.cpp  Plot_functions.cpp  Plotter.cpp  Robot.cpp  Sensor.cpp  application.cpp  estimated_position.cpp  gaussian_noise.cpp  plot_functions.cpp  robot.cpp
KalmanFilter1D/: CMakeLists.txt  GaussianLocalizer.cpp  GaussianNoiseProvider.cpp  Robot.cpp  World.cpp
KalmanFilter1D/headers/: GaussianLocalizer.h  GaussianNoiseProvider.h  Robot.h  World.h
KalmanFilter1D/include/: EventDispatcher.h  GaussianDistributionDescriptor.h  GaussianNoiseGenerator.h  GaussianNoiseProvider.h  IGaussianNoiseGenerator.h  ILocalizer.h  IMovingObjectContainer.h  IMovingObjectPositionStore.h  IObservableRobot.h  IRobotObserver.h  IWorld.h  Localizer.h  NoiseGenerator.h  Robot.h  World.h
KalmanFilter1D/interfaces/: IGaussianNoiseProvider.h
KalmanFilter1D/src/: GaussianDistributionDescriptor.cpp  GaussianLocalizer.cpp  GaussianNoiseGenerator.cpp  Localizer.cpp  NoiseGenerator.cpp  Robot.cpp  World.cpp
Tests/: CMakeLists.txt  GaussianLocalizerTests.cpp  GaussianNoiseProviderTests.cpp  RobotTests.cpp  WorldTests.cpp
Tests/include/: Distribution_tester.hpp  distribution_validator.hpp
Tests/src/: LocalizerTests.cpp
Tests/test/: Gaussian_noise_tests.cpp  Localizer_tests.cpp  Sensor_tests.cpp  gaussian_noise.cpp
Tests/tests/: GaussianLocalizerTests.cpp  GaussianNoiseProviderTests.cpp  LocalizerTests.cpp  NoiseGeneratorTests.cpp  RobotTests.cpp  WorldTests.cpp
UI/: CMakeLists.txt
UI/include/: MainWindow.h
UI/src/: Main.cpp  MainWindow.cpp
include/: Estimated_position.h  Gaussian_noise.h  Localizer.h  MainWindow.h  Main_window.h  PlotFunctions.h  Plotter.h  gaussian_noise.h  sensor.h
kalman_filter_1d/: CMakeLists.txt
kalman_filter_1d/depr/: GaussianNoiseGeneratorDepr.cpp  GaussianNoiseGeneratorDepr.h  IGaussianNoiseGeneratorDepr.h  ILocalizerDepr.h  IWorldDepr.h  LocalizerDepr.cpp  LocalizerDepr.h  RobotDepr.cpp  RobotDepr.h  WorldDepr.cpp  WorldDepr.h
kalman_filter_1d/include/: GaussianNoise.h
kalman_filter_1d/src/: GaussianNoise.cpp  Localizer.cpp
src/: CMakeLists.txt  Estimated_position.cpp  GaussianDistributionDescriptor.cpp  GaussianNoiseProvider.cpp  Gaussian_noise.cpp  Localizer.cpp  Main.cpp  MainWindow.cpp  MainWindow.h  Main_window.cpp  PlotFunctions.cpp  Plot_functions.cpp  Plotter.cpp  PositionEstimator.cpp  PositionEstimator.h  Robot.cpp  UniformSeed.cpp  World.cpp  application.cpp  demo_window.cpp  localizer.cpp  main.cpp  plotter.cpp  sensor.cpp
src/interfaces/: GaussianLocalizer.h  GaussianNoiseProvider.h  ILocalizer.hpp  IMovingObject.hpp  IMovingObjectPositionStore.hpp  IRobotPositionMaintainer.hpp  MainWindow.h  PositionEstimator.h  Robot.h  UniformSeed.h  World.h
test/: GaussianNoiseTests.cpp  Gaussian_noise_tests.cpp  LocalizerTests.cpp  Localizer_tests.cpp  PlotFunctionsTests.cpp  Plot_functions_tests.cpp  PlotterTests.cpp  localizer.cpp  plot_functions.cpp  sensor.cpp
test/include/: distribution_validator.hpp
tests/: CMakeLists.txt  FactorialTests.cpp  GaussianLocalizerTests.cpp  GaussianNoiseProviderTests.cpp  Init.cpp  PositionEstimatorTests.cpp  RobotTests.cpp  TestEnvironmentTests.cpp  UniformSeedTests.cpp  WorldTests.cpp
tests/depr/: LocalizerTestsDepr.cpp  NoiseGeneratorTestsDepr.cpp  RobotTestsDepr.cpp  TestEnvironmentTestsDepr.cpp  WorldTestsDepr.cpp
tests/include/catch2/: catch.hpp
tests/include/config/: CustomAssertionForSnowhouse.hpp
tests/src/: LocalizerTests.cpp
